<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" >

        <LinearLayout
            android:id="@+id/layout_conteneur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/activity_event_details_deb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                 <TextView
                    android:id="@+id/activity_event_details_lib_ddeb"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Début : " />

                <its.my.time.view.date.DateTextView
                    android:id="@+id/activity_event_details_text_ddeb"
                    style="@style/btn_default"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <its.my.time.view.date.TimeTextView
                    android:id="@+id/activity_event_details_text_hdeb"
                    style="@style/btn_default"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_event_details_fin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/activity_event_details_lib_dfin"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Fin : " />

                <its.my.time.view.date.DateTextView
                    android:id="@+id/activity_event_details_text_dfin"
                    style="@style/btn_default"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <its.my.time.view.date.TimeTextView
                    android:id="@+id/activity_event_details_text_hfin"
                    style="@style/btn_default"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_event_details_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


                <CheckBox
                    android:id="@+id/activity_event_details_allDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:checked="false" 
                    android:text="Journée: "/>
                
                <TextView
                    android:id="@+id/activity_event_details_lib_recurrence"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Récurrence : " />
                
                <Spinner
                    android:id="@+id/activity_event_details_spinner_recurrence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="1 semaine" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/activity_event_details_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white" >

                <EditText
                    android:id="@+id/activity_event_details_text_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="#F5F5F5"
                    android:ellipsize="end"
                    android:gravity="top"
                    android:hint="@string/view_event_detail_details"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:textSize="@dimen/text_size_small" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/activity_event_details_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/white" >

                <Spinner
                    android:id="@+id/activity_event_details_spinner_compte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/view_event_detail_compte" />
            </FrameLayout>

            <LinearLayout
                android:id="@+id/activity_event_details_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/activity_event_details_btn_valider"
                    style="@style/btn_valider"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/btn_valider"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/activity_event_details_btn_effacer"
                    style="@style/btn_effacer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_effacer"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>